--- a/lecture/_config.yml
+++ b/lecture/_config.yml
@@ -5,10 +5,10 @@
 
 #######################################################################################
 # Book settings
-title                       : ""  # The title of the book. Will be placed in the left navbar.
-author                      : Peer Herholz, José C. García Alanis, Christoph Vogelbacher  # The author of the book
-copyright                   : "2020"  # Copyright year to be placed in the footer
-logo                        : "static/gorella_logo.png"  # A path to the book logo
+title                       : "Spring term 2022"  # The title of the book. Will be placed in the left navbar.
+author                      : Peer Herholz  # The author of the book
+copyright                   : "2021"  # Copyright year to be placed in the footer
+logo                        : "static/cog_com_neuro_ml_dl_logo.png"  # A path to the book logo
 exclude_patterns            : []  # Patterns to skip when building the book. Can be glob-style (e.g. "*skip.ipynb")
 
 #######################################################################################
@@ -41,9 +41,9 @@ launch_buttons:
   thebe                     : false  # Add a thebe button to pages (requires the repository to run on Binder)
 
 repository:
-  url                       : https://github.com/G0RELLA/gorella_base  # The URL to your book's repository
+  url                       : https://github.com/PeerHerholz/Cog_Com_Neuro_ML_DL  # The URL to your book's repository
   path_to_book              : "lecture"  # A path to your book's folder, relative to the repository root.
-  branch                    : master  # Which branch of the repository should be used when creating links
+  branch                    : main  # Which branch of the repository should be used when creating links
 
 #######################################################################################
 # Advanced and power-user settings
