--- a/lecture/_toc.yml
+++ b/lecture/_toc.yml
@@ -14,6 +14,7 @@ chapters:
     - file: introduction/notebooks/neuroscience/mri_intro.ipynb
       sections:
       - file: introduction/notebooks/neuroscience/image_manipulation_nibabel.ipynb
+    - file: introduction/notebooks/neuroscience/morphometry.ipynb      
   - file: introduction/pages/introduction_3.md
   - file: introduction/pages/introduction_4.md
   - file: introduction/pages/introduction_5.md
