--- a/environment.yml
+++ b/environment.yml
@@ -1,38 +1,201 @@
-name: neuro_ml
+name: neuro_ai
 channels:
   - conda-forge
   - defaults
 dependencies:
-  - python=3.9
-  - ipython
-  - jupyter
-  - jupyterlab
-  - jupyter_contrib_nbextensions
-  - matplotlib
-  - nb_conda
-  - nb_conda_kernels
-  - nbconvert
-  - nbformat
-  - numpy
-  - pandas
-  - pip
-  - pytest
-  - scikit-image
-  - scikit-learn
-  - nilearn
-  - mne
-  - scipy
-  - seaborn
-  - statsmodels
-  - pytorch
-  - tensorflow
-  - traits
-  - bokeh
-  - plotly
+  - bzip2=1.0.8=h0d85af4_4
+  - ca-certificates=2021.10.8=h033912b_0
+  - libcxx=13.0.1=hc203e6f_0
+  - libffi=3.2.1=hb1e8313_1007
+  - libzlib=1.2.11=h6c3fc93_1014
+  - ncurses=6.3=he49afe7_0
+  - openssl=1.0.2u=h0b31af3_0
+  - pip=22.0.4=pyhd8ed1ab_0
+  - python=3.7.0=h145921a_1006
+  - python_abi=3.7=2_cp37m
+  - readline=7.0=hcfe32e1_1001
+  - setuptools=62.0.0=py37hf985489_0
+  - sqlite=3.28.0=h9721f7c_0
+  - tk=8.6.12=h5dbffcc_0
+  - wheel=0.37.1=pyhd8ed1ab_0
+  - xz=5.2.5=haf1e3a3_1
+  - zlib=1.2.11=h6c3fc93_1014
   - pip:
-    - joblib
-    - nbval
-    - nose
-    - pingouin
-    - RISE
-    - jupyter-book
+    - absl-py==1.0.0
+    - alabaster==0.7.12
+    - anyio==3.5.0
+    - appdirs==1.4.4
+    - appnope==0.1.3
+    - argon2-cffi==21.3.0
+    - argon2-cffi-bindings==21.2.0
+    - astor==0.8.1
+    - astunparse==1.6.3
+    - async-generator==1.10
+    - attrs==20.3.0
+    - babel==2.9.1
+    - backcall==0.2.0
+    - beautifulsoup4==4.10.0
+    - bids-validator==1.9.3
+    - bleach==4.1.0
+    - cached-property==1.5.2
+    - cachetools==5.0.0
+    - certifi==2021.10.8
+    - cffi==1.15.0
+    - charset-normalizer==2.0.12
+    - click==7.1.2
+    - colorama==0.4.4
+    - cycler==0.11.0
+    - debugpy==1.6.0
+    - decorator==5.1.1
+    - defusedxml==0.7.1
+    - docopt==0.6.2
+    - docutils==0.16
+    - entrypoints==0.4
+    - fastjsonschema==2.15.3
+    - flatbuffers==2.0
+    - fonttools==4.31.2
+    - formulaic==0.2.4
+    - gast==0.5.3
+    - ghp-import==2.0.2
+    - gitdb==4.0.9
+    - gitpython==3.1.27
+    - google-auth==2.6.2
+    - google-auth-oauthlib==0.4.6
+    - google-pasta==0.2.0
+    - grpcio==1.44.0
+    - h5py==3.6.0
+    - idna==3.3
+    - imagesize==1.3.0
+    - importlib-metadata==4.11.3
+    - importlib-resources==5.6.0
+    - interface-meta==1.3.0
+    - ipykernel==6.12.1
+    - ipython==7.32.0
+    - ipython-genutils==0.2.0
+    - ipywidgets==7.7.0
+    - jedi==0.18.1
+    - jinja2==3.0.0
+    - joblib==1.1.0
+    - jsonschema==3.2.0
+    - jupyter-book==0.11.1
+    - jupyter-cache==0.4.3
+    - jupyter-client==7.2.2
+    - jupyter-core==4.9.2
+    - jupyter-server==1.15.6
+    - jupyter-server-mathjax==0.2.5
+    - jupyter-sphinx==0.3.1
+    - jupyterbook-latex==0.3.1
+    - jupyterlab-widgets==1.1.0
+    - jupytext==1.10.3
+    - keras==2.8.0
+    - keras-preprocessing==1.1.2
+    - kiwisolver==1.4.2
+    - latexcodec==2.0.1
+    - libclang==13.0.0
+    - linkify-it-py==1.0.3
+    - markdown==3.3.6
+    - markdown-it-py==0.6.2
+    - markupsafe==2.1.1
+    - matplotlib==3.5.1
+    - matplotlib-inline==0.1.3
+    - mdit-py-plugins==0.2.6
+    - mistune==0.8.4
+    - mne==1.0.0
+    - mne-bids==0.10
+    - myst-nb==0.12.0
+    - myst-parser==0.13.6
+    - nbclient==0.5.1
+    - nbconvert==5.6.1
+    - nbdime==3.1.1
+    - nbformat==5.3.0
+    - nest-asyncio==1.5.5
+    - nibabel==3.2.2
+    - nilearn==0.9.0
+    - notebook==6.4.10
+    - num2words==0.5.10
+    - numpy==1.21.5
+    - oauthlib==3.2.0
+    - opt-einsum==3.3.0
+    - packaging==21.3
+    - pandas==1.1.5
+    - pandocfilters==1.5.0
+    - parso==0.8.3
+    - pexpect==4.8.0
+    - pickleshare==0.7.5
+    - pillow==9.1.0
+    - plotly==5.7.0
+    - pooch==1.6.0
+    - prometheus-client==0.14.0
+    - prompt-toolkit==3.0.29
+    - protobuf==3.20.0
+    - psutil==5.9.0
+    - ptyprocess==0.7.0
+    - pyasn1==0.4.8
+    - pyasn1-modules==0.2.8
+    - pybids==0.15.1
+    - pybtex==0.24.0
+    - pybtex-docutils==1.0.1
+    - pycparser==2.21
+    - pydata-sphinx-theme==0.7.2
+    - pygments==2.11.2
+    - pyparsing==3.0.7
+    - pyrsistent==0.18.1
+    - python-dateutil==2.8.2
+    - pytz==2022.1
+    - pyyaml==6.0
+    - pyzmq==22.3.0
+    - requests==2.27.1
+    - requests-oauthlib==1.3.1
+    - rsa==4.8
+    - scikit-learn==1.0.2
+    - scipy==1.7.3
+    - seaborn==0.11.2
+    - send2trash==1.8.0
+    - six==1.16.0
+    - smmap==5.0.0
+    - sniffio==1.2.0
+    - snowballstemmer==2.2.0
+    - soupsieve==2.3.2
+    - sphinx==3.5.4
+    - sphinx-book-theme==0.1.10
+    - sphinx-comments==0.0.3
+    - sphinx-copybutton==0.5.0
+    - sphinx-external-toc==0.2.4
+    - sphinx-jupyterbook-latex==0.4.6
+    - sphinx-multitoc-numbering==0.1.3
+    - sphinx-panels==0.5.2
+    - sphinx-thebe==0.0.10
+    - sphinx-togglebutton==0.2.3
+    - sphinxcontrib-applehelp==1.0.2
+    - sphinxcontrib-bibtex==2.2.1
+    - sphinxcontrib-devhelp==1.0.2
+    - sphinxcontrib-htmlhelp==2.0.0
+    - sphinxcontrib-jsmath==1.0.1
+    - sphinxcontrib-qthelp==1.0.3
+    - sphinxcontrib-serializinghtml==1.1.5
+    - sqlalchemy==1.3.24
+    - tenacity==8.0.1
+    - tensorboard==2.8.0
+    - tensorboard-data-server==0.6.1
+    - tensorboard-plugin-wit==1.8.1
+    - tensorflow==2.8.0
+    - tensorflow-io-gcs-filesystem==0.24.0
+    - termcolor==1.1.0
+    - terminado==0.13.3
+    - testpath==0.6.0
+    - tf-estimator-nightly==2.8.0.dev2021122109
+    - threadpoolctl==3.1.0
+    - toml==0.10.2
+    - tornado==6.1
+    - tqdm==4.64.0
+    - traitlets==5.1.1
+    - typing-extensions==4.1.1
+    - uc-micro-py==1.0.1
+    - urllib3==1.26.9
+    - wcwidth==0.2.5
+    - webencodings==0.5.1
+    - websocket-client==1.3.2
+    - werkzeug==2.1.1
+    - widgetsnbextension==3.6.0
+    - wrapt==1.14.0
+    - zipp==3.8.0
