--- a/lecture/_toc.yml
+++ b/lecture/_toc.yml
@@ -15,7 +15,8 @@ chapters:
       sections:
       - file: introduction/notebooks/neuroscience/image_manipulation_nibabel.ipynb
     - file: introduction/notebooks/neuroscience/morphometry.ipynb
-    - file: introduction/notebooks/neuroscience/fmri_intro.ipynb      
+    - file: introduction/notebooks/neuroscience/fmri_intro.ipynb     
+      sections: 
       - file: introduction/notebooks/neuroscience/image_manipulation_nilearn.ipynb
   - file: introduction/pages/introduction_3.md
   - file: introduction/pages/introduction_4.md
