--- a/lecture/_toc.yml
+++ b/lecture/_toc.yml
@@ -18,6 +18,9 @@ chapters:
     - file: introduction/notebooks/neuroscience/fmri_intro.ipynb     
       sections: 
       - file: introduction/notebooks/neuroscience/image_manipulation_nilearn.ipynb
+    - file: introduction/notebooks/neuroscience/connectivity_intro.ipynb     
+      sections: 
+      - file: introduction/notebooks/neuroscience/functional_connectivity.ipynb      
   - file: introduction/pages/introduction_3.md
   - file: introduction/pages/introduction_4.md
   - file: introduction/pages/introduction_5.md
