--- a/lecture/_toc.yml
+++ b/lecture/_toc.yml
@@ -22,10 +22,11 @@ chapters:
       sections:
       - file: introduction/notebooks/neuroscience/functional_connectivity.ipynb
     - file: introduction/notebooks/neuroscience/eeg_introduction.ipynb
-    - file: introduction/notebooks/neuroscience/mne_introduction.ipynb
-    - file: introduction/notebooks/neuroscience/mne_preprocessing.ipynb
-    - file: introduction/notebooks/neuroscience/mne_erp.ipynb
-    - file: introduction/notebooks/neuroscience/mne_workflow_tutorial.ipynb
+      sections:
+      - file: introduction/notebooks/neuroscience/mne_introduction.ipynb
+      - file: introduction/notebooks/neuroscience/mne_preprocessing.ipynb
+      - file: introduction/notebooks/neuroscience/mne_erp.ipynb
+      - file: introduction/notebooks/neuroscience/mne_workflow_tutorial.ipynb
   - file: introduction/pages/introduction_3.md
   - file: introduction/pages/introduction_4.md
   - file: introduction/pages/introduction_5.md
