--- a/lecture/_toc.yml
+++ b/lecture/_toc.yml
@@ -23,7 +23,10 @@ chapters:
       - file: introduction/notebooks/neuroscience/image_manipulation_nilearn.ipynb
     - file: introduction/notebooks/neuroscience/connectivity_intro.ipynb     
       sections: 
-      - file: introduction/notebooks/neuroscience/functional_connectivity.ipynb      
+      - file: introduction/notebooks/neuroscience/functional_connectivity.ipynb 
+    - file: introduction/notebooks/neuroscience/statistical_maps.ipynb     
+      sections: 
+      - file: introduction/notebooks/neuroscience/statistical_analyses_MRI.ipynb            
   - file: introduction/pages/introduction_3.md
   - file: introduction/pages/introduction_4.md
   - file: introduction/pages/introduction_5.md
