--- a/lecture/_toc.yml
+++ b/lecture/_toc.yml
@@ -55,6 +55,7 @@ chapters:
     sections:
     - file: introduction/notebooks/artificial_intelligence/terms_definitions.ipynb
     - file: introduction/notebooks/artificial_intelligence/ML_intro.ipynb
+    - file: introduction/notebooks/artificial_intelligence/DL_basics_architectures.ipynb
   - file: introduction/pages/introduction_6.md
 - file: experimentation/experimentation.md
 - file: finalization/finalization.md
