update requirements.txt to fix build error

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,211 @@
+absl-py==1.0.0
+aiohttp==3.8.1
+aiosignal==1.2.0
+alabaster==0.7.12
+annexremote==1.6.0
+anyio==3.5.0
+appdirs==1.4.4
+appnope==0.1.3
+argon2-cffi==21.3.0
+argon2-cffi-bindings==21.2.0
+astor==0.8.1
+astunparse==1.6.3
+async-generator==1.10
+async-timeout==4.0.2
+asynctest==0.13.0
+attrs==20.3.0
+Babel==2.9.1
+backcall==0.2.0
+beautifulsoup4==4.10.0
+bids-validator==1.9.3
+bleach==4.1.0
+boto==2.49.0
+cached-property==1.5.2
+cachetools==5.0.0
+certifi==2021.10.8
+cffi==1.15.0
+chardet==4.0.0
+charset-normalizer==2.0.12
+click==7.1.2
+colorama==0.4.4
+cycler==0.11.0
+datalad==0.17.5
+debugpy==1.6.0
+decorator==5.1.1
+defusedxml==0.7.1
+dipy==1.5.0
+docopt==0.6.2
+docutils==0.16
+entrypoints==0.4
+fasteners==0.17.3
+fastjsonschema==2.15.3
+flatbuffers==2.0
+fonttools==4.31.2
+formulaic==0.2.4
+frozenlist==1.3.0
+fury==0.8.0
+gast==0.5.3
+ghp-import==2.0.2
+gitdb==4.0.9
+GitPython==3.1.27
+google-auth==2.6.2
+google-auth-oauthlib==0.4.6
+google-pasta==0.2.0
+grpcio==1.44.0
+h5py==3.6.0
+humanize==4.3.0
+idna==3.3
+imageio==2.18.0
+imagesize==1.3.0
+importlib-metadata==4.11.3
+importlib-resources==5.6.0
+interface-meta==1.3.0
+ipykernel==6.12.1
+ipython==7.32.0
+ipython-genutils==0.2.0
+ipywidgets==7.7.0
+iso8601==1.0.2
+jaraco.classes==3.2.2
+jedi==0.18.1
+Jinja2==3.0.0
+joblib==1.1.0
+jsonschema==3.2.0
+jupyter-book==0.11.1
+jupyter-cache==0.4.3
+jupyter-client==7.2.2
+jupyter-core==4.9.2
+jupyter-server==1.15.6
+jupyter-server-mathjax==0.2.5
+jupyter-sphinx==0.3.1
+jupyterbook-latex==0.3.1
+jupyterlab-widgets==1.1.0
+jupytext==1.10.3
+keras==2.8.0
+Keras-Preprocessing==1.1.2
+keyring==23.9.1
+keyrings.alt==4.2.0
+kiwisolver==1.4.2
+latexcodec==2.0.1
+libclang==13.0.0
+linkify-it-py==1.0.3
+Markdown==3.3.6
+markdown-it-py==0.6.2
+MarkupSafe==2.1.1
+matplotlib==3.5.2
+matplotlib-inline==0.1.3
+mdit-py-plugins==0.2.6
+mistune==0.8.4
+mne==1.0.0
+mne-bids==0.10
+more-itertools==8.14.0
+msgpack==1.0.4
+multidict==6.0.2
 myst-nb==0.12.0
 myst-parser==0.13.6
-jupyter-book==0.11.1
 nbclient==0.5.1
-jinja2==3.0.0
-jupytext
-nilearn==0.7.0
-seaborn
-tensorflow
-mne
-mne-bids
-pybids
-dipy
-window
-fury
-imageio
+nbconvert==5.6.1
+nbdime==3.1.1
+nbformat==5.3.0
+nest-asyncio==1.5.5
+nibabel==3.2.2
+nilearn==0.9.0
+notebook==6.4.10
+num2words==0.5.10
+numpy==1.21.5
+oauthlib==3.2.0
+opt-einsum==3.3.0
+packaging==21.3
+pandas==1.1.5
+pandocfilters==1.5.0
+parso==0.8.3
+patool==1.12
+pexpect==4.8.0
+pickleshare==0.7.5
+Pillow==9.1.0
+platformdirs==2.5.2
+plotly==5.7.0
+pooch==1.6.0
+prometheus-client==0.14.0
+prompt-toolkit==3.0.29
+protobuf==3.20.0
+psutil==5.9.0
+ptyprocess==0.7.0
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pybids==0.15.1
+pybtex==0.24.0
+pybtex-docutils==1.0.1
+pycparser==2.21
+pydata-sphinx-theme==0.7.2
+Pygments==2.11.2
+pyparsing==3.0.7
+pyrsistent==0.18.1
+python-dateutil==2.8.2
+python-gitlab==3.9.0
+pytz==2022.1
+PyYAML==6.0
+pyzmq==22.3.0
+requests==2.27.1
+requests-oauthlib==1.3.1
+requests-toolbelt==0.9.1
+rise==5.7.1
+rsa==4.8
+scikit-learn==1.0.2
+scipy==1.7.3
+seaborn==0.11.2
+Send2Trash==1.8.0
+simplejson==3.17.6
+six==1.16.0
+sklearn==0.0
+smmap==5.0.0
+sniffio==1.2.0
+snowballstemmer==2.2.0
+soupsieve==2.3.2
+Sphinx==3.5.4
+sphinx-book-theme==0.1.10
+sphinx-comments==0.0.3
+sphinx-copybutton==0.5.0
+sphinx-external-toc==0.2.4
+sphinx-jupyterbook-latex==0.4.6
+sphinx-multitoc-numbering==0.1.3
+sphinx-panels==0.5.2
+sphinx-thebe==0.0.10
+sphinx-togglebutton==0.2.3
+sphinxcontrib-applehelp==1.0.2
+sphinxcontrib-bibtex==2.2.1
+sphinxcontrib-devhelp==1.0.2
+sphinxcontrib-htmlhelp==2.0.0
+sphinxcontrib-jsmath==1.0.1
+sphinxcontrib-qthelp==1.0.3
+sphinxcontrib-serializinghtml==1.1.5
+SQLAlchemy==1.3.24
+tenacity==8.0.1
+tensorboard==2.8.0
+tensorboard-data-server==0.6.1
+tensorboard-plugin-wit==1.8.1
+tensorflow==2.8.0
+tensorflow-io-gcs-filesystem==0.24.0
+termcolor==1.1.0
+terminado==0.13.3
+testpath==0.6.0
+tf-estimator-nightly==2.8.0.dev2021122109
+threadpoolctl==3.1.0
+toml==0.10.2
+tornado==6.1
+tqdm==4.64.0
+traitlets==5.1.1
+typing_extensions==4.1.1
+uc-micro-py==1.0.1
+urllib3==1.26.9
+vtk==9.1.0
+wcwidth==0.2.5
+webencodings==0.5.1
+websocket-client==1.3.2
+Werkzeug==2.1.1
+Whoosh==2.7.4
+widgetsnbextension==3.6.0
+window==0.0.3
+wrapt==1.14.0
+wslink==1.6.0
+yarl==1.7.2
+zipp==3.8.0
